// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home show Loading data alert 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 44px;
  padding: 5px 25px;
  border: 1px solid transparent;
  color: rgba(0,0,0,0.6);
  font-size: 17px;
  font-weight: 400;
  border-radius: 5px;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
  background: #F5F5F5;
}

.c1 {
  margin-right: 15px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="MuiCircularProgress-root-1 MuiCircularProgress-colorPrimary-2"
      role="progressbar"
      style={
        Object {
          "height": 25,
          "width": 25,
        }
      }
    >
      <svg
        className="MuiCircularProgress-svg-4 MuiCircularProgress-svgIndeterminate-5"
        viewBox="0 0 50 50"
      >
        <circle
          className="MuiCircularProgress-circle-6 MuiCircularProgress-circleIndeterminate-7"
          cx={25}
          cy={25}
          fill="none"
          r={20}
          strokeWidth={2}
          style={Object {}}
        />
      </svg>
    </div>
  </div>
  Loading data
</div>
`;

exports[`Home show errors alert 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 44px;
  padding: 5px 25px;
  border: 1px solid transparent;
  color: rgba(0,0,0,0.6);
  font-size: 17px;
  font-weight: 400;
  border-radius: 5px;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
  background: #F9A825;
  color: #fff;
}

<div
  className="c0"
>
  There was an error
</div>
`;
